--- a/WebAPI/log4net.config
+++ b/WebAPI/log4net.config
@@ -3,7 +3,8 @@
 <log4net>
   <appender name="JsonFileLogger" type="log4net.Appender.FileAppender,log4net">
     <file value="C://Log//log.json" />
-    <layout type="Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout, Core" ></layout>
+    <layout type="Core.CrossCuttingConcerns.Logging.Log4Net.Layouts.JsonLayout, Core" >      
+    </layout>
   </appender>
   <appender name="DatabaseLogger" type="MicroKnights.Logging.AdoNetAppender, MicroKnights.Log4NetAdoNetAppender">
     <bufferSize value="1" />
@@ -34,11 +35,13 @@
     <appender-ref ref="JsonFileLogger"/>
   </root>-->
   <logger name="JsonFileLogger">
-    <level value="ALL"></level>
+    <level value="ALL">      
+    </level>
     <appender-ref ref="JsonFileLogger"/>
   </logger>
   <logger name="DatabaseLogger">
-    <level value="ALL"></level>
+    <level value="ALL">      
+    </level>
     <appender-ref ref="DatabaseLogger"/>
   </logger>
 </log4net>
